<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_margin="8dp"
    android:background="@drawable/expense_item_bg"
    android:elevation="2dp">


<!-- Input Fields -->
<TextView android:id="@+id/textAmount"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/expense_item_price"
        android:textColor="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/textCategory"
        android:text="@string/category"
        android:textColor="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/textNote"
        android:text="@string/note"
        android:textColor="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/textDate"
        android:text="@string/date"
        android:textColor="#212121"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
